Fix spacing

--- a/_sass/layouts/_stream.scss
+++ b/_sass/layouts/_stream.scss
@@ -22,7 +22,10 @@
 	}
 	
 	&:last-of-type {
-		margin-bottom: $container-padding * 4;
+		margin-bottom: $container-padding * 2;
+		@include tablet-up {
+			margin-bottom: $container-padding * 4;
+		}
 	}
 	
 }
